# tradingbot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: __init__.py  backtest.py  dashboard.py  market.py  news.py  signals.py  trades.py  ws.py
backend/app/core/: engine.py
backend/app/core/backtest/: advanced_metrics.py  engine.py  metrics.py  regime.py  walkforward.py
backend/app/core/data/: alpaca.py  base.py
backend/app/core/execution/: alpaca.py  base.py
backend/app/core/models/: base.py  ensemble.py  features.py  longterm.py  swing.py
backend/app/core/risk/: kelly.py  manager.py
backend/app/core/sentiment/: base.py  finbert.py  news_fetcher.py  scorer.py
backend/app/core/signals/: generator.py
backend/app/db/: models.py  session.py
backend/app/schemas/: __init__.py  backtest.py  portfolio.py  settings.py  signal.py  trade.py
docs/: ARCHITECTURE.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/news/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/app/trades/: page.tsx
frontend/src/components/: Nav.tsx
frontend/src/components/charts/: EquityCurve.tsx
frontend/src/components/portfolio/: PositionsTable.tsx  StatsCards.tsx
frontend/src/components/signals/: SignalCard.tsx
frontend/src/lib/api/: client.ts
frontend/src/lib/hooks/: useWebSocket.ts
